# koi

./: .gitignore  Cargo.toml  README.md  build.rs
ike/: Cargo.toml
ike/src/: input.rs  main.rs
kohaku/: Cargo.toml  build.rs
kohaku/src/: lib.rs
kohaku/src/core/input/: action_context.rs
kohaku/src/renderer/: mod.rs  renderer.rs
kohaku/src/renderer/backend/vk/: debug_utils.rs
kohaku/src/renderer/backend/vk/handles/: device.rs  instance.rs  surface.rs
kohaku/src/renderer/backend/vk/resources/: command_buffer.rs  command_pool.rs  fence.rs  image.rs  pipeline.rs  render_pass.rs
kohaku/src/utils/: logger.rs  math.rs  traits.rs
resources/shaders/src/: alt.frag  alt.vert  black.frag  debug.frag  light.frag  mesh.vert  shader.frag  shader.vert  uv_debug.frag
shinzou/: Cargo.toml  build.rs
shinzou/src/core/input/: action_context.rs  mod.rs
shinzou/src/renderer/: renderer.rs
shinzou/src/renderer/backend/vk/: backend.rs  config.rs  mod.rs  utils.rs
shinzou/src/renderer/backend/vk/handles/: allocator.rs  instance.rs
shinzou/src/renderer/backend/vk/resources/: buffer.rs  depth_buffer.rs  frame.rs  framebuffer.rs  material.rs  mesh.rs  mod.rs  pipeline_layout.rs  resource_manager.rs  scene.rs  semaphore.rs  shader.rs  swapchain.rs  texture.rs
shinzou/src/renderer/entities/: camera.rs  mesh.rs  mod.rs  renderable.rs  texture.rs
shinzou/src/renderer/hal/: backend.rs  mod.rs
src/: main.rs
src/app/: mod.rs  window.rs
src/core/: app.rs  input.rs  mod.rs  window.rs
src/core/input/: action_context.rs  input_manager.rs  types.rs
src/renderer/: mod.rs  renderer.rs
src/renderer/backend/: backend.rs  config.rs  debug_utils.rs  mod.rs
src/utils/: ffi.rs  math.rs  mod.rs  traits.rs
(+74 files in other folders)
