[package]
name = "ike"
version = "0.1.0"
authors = ["Chris Statkiewicz <christopherstat@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shinzou = { path = "../shinzou" }

log = "0.4.14"
paste = "1.0.5"
ultraviolet = "0.8.0"


[dev-dependencies]
env_logger = "0.8.3" # Enable logging during tests