[package]
name = "kohaku"
version = "0.1.0"
authors = ["Chris Statkiewicz <christopherstat@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
byteorder = "1.3.4"
chrono = "0.4.15"
env_logger = "0.7.1"
field-offset = "0.3.2"
gilrs-core = "0.3.0"
log = "0.4.0"
paste = "1.0.4"
tobj = "2.0.3"
ultraviolet = "0.7.5"
vk-mem = "0.2.2"
winit = "0.22.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
env_logger = "0.7.1" # Enable logging during tests