[package]
name = "shinzou"
version = "0.1.0"
authors = ["Chris Statkiewicz <christopherstat@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
byteorder = "1.4.3"
chrono = "0.4.19"
env_logger = "0.8.3"
field-offset = "0.3.4"
gilrs-core = "0.3.1"
log = "0.4.14"
paste = "1.0.5"
tobj = "3.0.0"
ultraviolet = "0.8.0"
vk-mem = "0.2.2"
winit = "0.25.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
env_logger = "0.8.3" # Enable logging during tests